...
    is BookSearchViewState.SearchResults -> {
      when (viewState.layoutMode) {
        BookOverviewLayoutMode.List -> {
          LazyColumn(
            contentPadding = PaddingValues(vertical = 16.dp),
            modifier = Modifier
              .testTag("book-search-results")
              .padding(contentPadding)
              .padding(horizontal = 8.dp),
            verticalArrangement = Arrangement.spacedBy(8.dp),
            content = {
              items(viewState.books) { book ->
                ListBookRow(
...
